@@ -54,7 +54,7 @@ def is_decorated_with_dataclass(
     )
 
 
-def dataclass_transform(node: nodes.ClassDef) -> None:
+def dataclass_transform(node: nodes.ClassDef) -> nodes.ClassDef | None:
     """Rewrite a dataclass to be easily understood by pylint."""
     node.is_dataclass = True
 
@@ -70,7 +70,7 @@ def dataclass_transform(node: nodes.ClassDef) -> None:
         node.instance_attrs[name] = [rhs_node]
 
     if not _check_generate_dataclass_init(node):
-        return
+        return None
 
     kw_only_decorated = False
     if node.decorators.nodes:
@@ -102,6 +102,7 @@ def dataclass_transform(node: nodes.ClassDef) -> None:
             new_assign = parse(f"{DEFAULT_FACTORY} = object()").body[0]
             new_assign.parent = root
             root.locals[DEFAULT_FACTORY] = [new_assign.targets[0]]
+    return node
 
 
 def _get_dataclass_attributes(
