@@ -39,6 +39,10 @@ What's New in astroid 4.0.3?
 ============================
 Release date: TBA
 
+* Fix base class inference for dataclasses using the PEP 695 typing syntax.
+
+  Refs pylint-dev/pylint#10788
+
 
 
 What's New in astroid 4.0.2?
